<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background_img">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="@color/evp_cyan_for_indicators"
        app:tabTextAppearance="@style/sockets_tab_text"
        app:tabSelectedTextColor="@color/white"
        app:tabGravity="center">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/indLid"
            android:text="@string/lid"
            android:layout_height="wrap_content"
            android:layout_width="50dp"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/indFrame"
            android:text="@string/frame"
            android:layout_height="wrap_content"
            android:layout_width="50dp"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/indCutter"
            android:text="@string/cutter"
            android:layout_height="wrap_content"
            android:layout_width="50dp"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/indLid12"
            android:text="@string/lid_12"
            android:layout_height="wrap_content"
            android:layout_width="50dp"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/indFrame12"
            android:text="@string/frame_12"
            android:layout_height="wrap_content"
            android:layout_width="50dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/indCutter12"
            android:text="@string/cutter_12"
            android:layout_height="wrap_content"
            android:layout_width="50dp"/>

    </com.google.android.material.tabs.TabLayout>

</LinearLayout>
