<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background_img"
    android:layout_gravity="center">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTPALid"
        style="@style/main_page_btn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_button_shape"
        android:gravity="center"
        android:text="@string/lid"
        app:layout_constraintBottom_toBottomOf="@+id/btnTPAFrame"
        app:layout_constraintEnd_toStartOf="@+id/btnTPAFrame"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTPAFrame"
        style="@style/main_page_btn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_button_shape"
        android:gravity="center"
        android:text="@string/frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTPACutter"
        style="@style/main_page_btn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_button_shape"
        android:gravity="center"
        android:text="@string/cutter"
        app:layout_constraintBottom_toBottomOf="@+id/btnTPAFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnTPAFrame" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTPALid12"
        style="@style/main_page_btn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_button_shape"
        android:gravity="center"
        android:text="@string/lid_12"
        app:layout_constraintEnd_toEndOf="@+id/btnTPALid"
        app:layout_constraintTop_toBottomOf="@+id/btnTPALid"
        android:layout_marginTop="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTPAFrame12"
        style="@style/main_page_btn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_button_shape"
        android:gravity="center"
        android:text="@string/frame_12"
        app:layout_constraintBottom_toBottomOf="@+id/btnTPALid12"
        app:layout_constraintEnd_toEndOf="@+id/btnTPAFrame"
        app:layout_constraintTop_toTopOf="@+id/btnTPALid12" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTPACutter12"
        style="@style/main_page_btn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_button_shape"
        android:gravity="center"
        android:text="@string/cutter_12"
        app:layout_constraintBottom_toBottomOf="@+id/btnTPALid12"
        app:layout_constraintEnd_toEndOf="@+id/btnTPACutter"
        app:layout_constraintTop_toTopOf="@+id/btnTPAFrame12" />

</androidx.constraintlayout.widget.ConstraintLayout>