<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_img">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCurrentTasks"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:background="@drawable/button_shape"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/main_page_btn"
            android:text="@string/CurrentTasks"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSockets"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="@+id/btnCurrentTasks"
            app:layout_constraintStart_toStartOf="@+id/btnCurrentTasks"
            app:layout_constraintTop_toBottomOf="@+id/btnCurrentTasks"
            style="@style/main_page_btn"
            android:text="@string/Sockets"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDefectRegister"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="@+id/btnSockets"
            app:layout_constraintStart_toStartOf="@+id/btnSockets"
            app:layout_constraintTop_toBottomOf="@+id/btnSockets"
            style="@style/main_page_btn"
            android:text="@string/register_a_defect"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAnomalyRegister"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="@+id/btnDefectRegister"
            app:layout_constraintStart_toStartOf="@+id/btnDefectRegister"
            app:layout_constraintTop_toBottomOf="@+id/btnDefectRegister"
            style="@style/main_page_btn"
            android:text="@string/register_a_anomaly"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>