<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvAuthorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/authorization_label"
        android:fontFamily="@font/roboto_mono"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
         />

    <LinearLayout
        android:id="@+id/llAuthForm"
        android:layout_width="340dp"
        android:layout_height="230dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthorization"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLoginLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            style="@style/auth_page_log_pwd"
            android:gravity="bottom"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:background="@drawable/ic_edit_text_loginform"
            android:ems="20"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:autofillHints="name"
            />

        <TextView
            android:id="@+id/tvPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/password_label"
            style="@style/auth_page_log_pwd"
            android:gravity="bottom"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ic_edit_text_loginform"
            android:ems="20"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:inputType="textPassword"
            android:autofillHints="password"/>

        <LinearLayout
            android:id="@+id/llSwitchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:track="@drawable/ic_switch_track"
                android:thumbTint="@color/white"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tvRememberMeLabel"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="16sp"
                android:fontFamily="@font/tilt_neon_regular"
                android:text="@string/remember_me_label"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnAuthButton"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/evp_cyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llAuthForm"
        android:layout_marginTop="20dp"
        android:text="@string/auth_button_text"
        android:textSize="20sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>